<resources>
    <string name="app_name">千方百剂</string>

    <string name="start">千方百剂</string>
    <string name="start_hint">欢迎来到《千方百剂》</string>

    <string name="enter_user_name">请输入用户名</string>
    <string name="enter_password">请输入密码</string>
    <string name="login">登 录</string>
    <string name="sign_up">注 册</string>
    <string name="forget_password">忘记密码</string>

    <string name="cut">已过方歌</string>
    <string name="restore">重新记忆</string>
    <string name="collection">收藏</string>
    <string name="delete">取消收藏</string>
    <string name="check">关键词检索</string>
    <string name="page">翻页模式</string>

    <string name="daily_line">------节选内容------</string>
    <string name="daily_read">每日一读</string>
    <string name="start_study">开始学习</string>
    <string name="back">返回</string>
    <string name="memory_card">记忆卡片</string>
    <string name="select">选择模式</string>
    <string name="readMode">阅读模式</string>
    <string name="memoryMode">随机测试</string>
    <string name="collectMode">我的收藏</string>
    <string name="deleteMode">删除条文</string>
    <string name="myTest">每日测试</string>
    <string name="fangge_hint">输入方歌序号</string>
    <string name="fangge_searchWord_hint">输入关键词</string>
    <string name="memoryReport">报告结果</string>
    <string name="memoryHint">------方歌背诵数------</string>
    <string name="memorySetting">方歌背诵</string>
    <string name="memoryLoad">查看已背诵方歌</string>
    <string name="selectMemoryNumber">------选择记忆数目------</string>
    <string name="memoryStart">开始背诵</string>
    <string name="memorySubmit">提交</string>
    <string name="memoryLoads">已学方歌</string>
    <string name="cardHint">当前卡片</string>
    <string name="cardListHint">输入标题</string>
    <string name="cardCreate">新建卡片</string>
    <string name="cardEdit">卡片编辑</string>
    <string name="cardTitleHint">输入卡片标题</string>
    <string name="cardSubmit">提交卡片</string>
    <string name="testSetting">方歌测试</string>
    <string name="testStart">开始测试</string>
    <string name="enter_email">请输入邮箱</string>
    <string name="enter_verification_code">请输入验证码</string>
    <string name="send_verification_code">获取</string>
    <string name="this_is_title">这是标题</string>
    <string name="this_is_hint1">这是提示1</string>
    <string name="this_is_hint_2">这是提示2</string>
    <string name="this_is_hint_3">这是提示3</string>
    <string name="this_is_hint_4">这是提示4</string>
    <string name="show_content">显示内容</string>
    <string name="title">题目：</string>
    <string name="card_content_1">内容1</string>
    <string name="input_content_1">输入内容1</string>
    <string name="card_content_2">内容2：</string>
    <string name="input_content_2">输入内容2</string>
    <string name="card_content_3">内容3：</string>
    <string name="input_content_3">输入内容3</string>
    <string name="card_content_4">内容4：</string>
    <string name="input_content_4">输入内容4</string>
    <string name="source">——方歌来源：123</string>
    <string name="test_fill">This is for test.</string>
    <string name="retrieve_password">找回密码</string>
    <string name="input_email">请输入邮箱</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="enter_new_password">请输入新密码</string>
    <string name="confirm">确 认</string>
    <string name="go_back_to_last_page">结束当前页面并返回上一页</string>
    <string name="read_mode_icon">阅读模式的icon</string>
    <string name="test_fill_fangge_id">方歌：104</string>
    <string name="test_fill_fangge_name">麻黄汤</string>
    <string name="test_fill_fagge_resource">汉·伤寒论</string>
    <string name="test_fill_fangge_content">桑菊饮中桔杏翘，芦根甘草薄荷饶；\n清疏肺卫轻宣剂，风温咳嗽服之消。</string>
    <string name="test_fill_fangge_info">功效：辛温解表</string>

</resources>
