<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:background="@drawable/guodu"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/test"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/co_1"
            />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@android:color/darker_gray"  />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/third"
        android:layout_below="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/circlerect2"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daily_read"
            android:textSize="15sp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:id="@+id/fangge_from"
            android:text=""
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey2"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/daily_line"

            android:textSize="15sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:id="@+id/fangge_content"
            android:text=""
            android:layout_marginTop="10dp"
            android:textColor="@color/grey"
            android:textSize="15sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="right"
            android:id="@+id/fangge_infor"
            android:text=""
            android:layout_marginTop="10dp"
            android:textColor="@color/grey2"
            android:textSize="15sp"
            android:layout_marginEnd="20dp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circlerect"
        android:text="@string/start_study"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:id="@+id/studyButton"
        android:layout_above="@+id/memoryButton"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circlerect"
        android:text="@string/memory_card"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:id="@+id/memoryButton"
        android:layout_above="@+id/fifth"
        />
    <View
        android:layout_marginTop="50dp"
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:background="@android:color/darker_gray"
        android:id="@+id/fifth"
        />

</RelativeLayout>