<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:background="@drawable/guodu"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/first"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonBack"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/back"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp" />
        <TextView
            android:id="@+id/test"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/co_1"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/first"
        android:layout_marginTop="20dp"
        android:id="@+id/third"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/center"
            android:layout_centerHorizontal="true"
            />
        <LinearLayout
            android:id="@+id/buttonToRead"
            android:layout_alignRight="@id/center"
            android:layout_marginRight="20dp"
            android:layout_width="120dp"
            android:layout_height="130dp"
            android:alpha="0.7"
            android:background="@drawable/circlerect2"
            android:orientation="vertical"
            android:layout_alignEnd="@id/center"
            android:layout_marginEnd="20dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/read"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/readMode"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonToMemory"
            android:layout_alignLeft="@id/center"
            android:layout_marginLeft="20dp"
            android:layout_width="120dp"
            android:layout_height="130dp"
            android:alpha="0.7"
            android:background="@drawable/circlerect2"
            android:orientation="vertical"
            android:layout_alignStart="@id/center"
            android:layout_marginStart="20dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/test"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/memoryMode"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20sp"
                />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/third"
        android:id="@+id/fourth"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/center2"
            android:layout_centerHorizontal="true"
            />

        <LinearLayout
            android:id="@+id/buttonToCollect"
            android:layout_alignRight="@id/center2"
            android:layout_marginRight="20dp"
            android:layout_width="120dp"
            android:layout_height="130dp"
            android:alpha="0.7"
            android:background="@drawable/circlerect2"
            android:orientation="vertical"
            android:layout_alignEnd="@id/center2"
            android:layout_marginEnd="20dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/collection"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/collectMode"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20sp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/buttonToDelete"
            android:layout_alignLeft="@id/center2"
            android:layout_marginLeft="20dp"
            android:layout_width="120dp"
            android:layout_height="130dp"
            android:alpha="0.7"
            android:background="@drawable/circlerect2"
            android:orientation="vertical"
            android:layout_alignStart="@id/center2"
            android:layout_marginStart="20dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/yiguo"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/deleteMode"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20sp"
                />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fourth"
        android:id="@+id/fifth"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/center5"
            android:layout_centerHorizontal="true"
            />

        <LinearLayout
            android:id="@+id/buttonToTest"
            android:layout_alignTop="@id/center5"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:background="@drawable/circlerect2"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/myTest"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>